For older java...